# cookie_cutter_rx_os

./: README.md
cookiecutter-ml/: cookiecutter.json
cookiecutter-ml/{{cookiecutter.project_name}}/: README.md  pyproject.toml
cookiecutter-ml/{{cookiecutter.project_name}}/.github/workflows/: static.yaml  testing.yaml
cookiecutter-ml/{{cookiecutter.project_name}}/src/{{cookiecutter.pkgname}}/: __init__.py
cookiecutter-software-library/: cookiecutter.json
cookiecutter-software-library/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
cookiecutter-software-library/{{cookiecutter.project_name}}/.github/workflows/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
cookiecutter-software-library/{{cookiecutter.project_name}}/src/{{cookiecutter.pkgname}}/: __init__.py
