[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63.2.0",
    "wheel>=0.37.1",
]

[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
authors = [
    {name = "{{cookiecutter.author}}"},
]
description = "{{cookiecutter.description}}"
requires-python = "{{cookiecutter.python_version}}"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

# The versions set are the ones used for the original install on Mac OS so should work if pinned to only those versions i.e. >= --> ==
dependencies = [
    "numpy>=1.24.4",
    "pytest>=7.4.4",
    "pandas>=2.0.0",
    "pre-commit>=3.5.0",
    "jax>=0.4.1",
    "torch>=2.2.1",
    "tensorflow>=2.17.0",
    "scikit-learn>=1.5.1",
    "pdocs>=1.2.0",
    "transformers>=4.44.2",
]
